Fixing ability issues / r3.0.9

--- a/src/main/resources/assets/levels/lang/en_US.lang
+++ b/src/main/resources/assets/levels/lang/en_US.lang
@@ -14,6 +14,7 @@ levels.ability.light=Light
 levels.ability.bloodlust=Bloodlust
 levels.ability.ethereal=Ethereal
 levels.ability.sting=Sting
+levels.ability.chained=Chained
 levels.ability.void=Void
 levels.ability.molten=Molten
 levels.ability.frozen=Frozen
@@ -21,5 +22,8 @@ levels.ability.toxic=Toxic
 levels.ability.enlightened=Enlightened
 levels.ability.hardened=Hardened
 levels.ability.void_armor=Void
+levels.ability.absorb=Absorb
+levels.ability.invisibility=Invisibility
+levels.ability.beastial=Beastial
 levels.experience.max=Max
 levels.update=Levels has a new versions available!
